Revert "fix: #ob-wrap width: 100% 제거로 ob-slides 마진 버그 수정"
This reverts commit f4d771fd621213aabfa95b17ad338be13ed135c2.

--- a/style.css
+++ b/style.css
@@ -2599,6 +2599,7 @@ input:focus, textarea:focus {
   height: 100%;
   background: transparent;
   position: relative;
+  width: 100%;
 }
 
 #ob-logo {
